Don't hack: small updates